--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+
+  "AppSettings":{
+    "Token": "Super Secret Key"
+  },
+
   "ConnectionStrings":{ 
 "DefaultConnection": "Data Source = DatingApp.db"
   }
