End of lesson 11

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -16,5 +16,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "CloudinarySettings": {
+    "CloudName": "cloudaravind",
+    "ApiKey": "256191544142854",
+    "ApiSecret":"dYzGCdr_0mWksOPWEWA1ea9yKyI"
+  }
 }
