End of Lesson 17 - published code to Azure

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -4,11 +4,10 @@
     "Token": "Super Secret Key"
   },
 
-  "ConnectionStrings":{ 
-"DefaultConnection": "Data Source = DatingApp.db"
-  }
-,
-  
+   "ConnectionStrings":{ 
+    "DefaultConnection": "Data Source=tcp:aravindfree.database.windows.net,1433;Initial Catalog=datingapp;User Id=datingapp@aravindfree.database.windows.net;Password=Welcome123*;"
+      },
+ 
   "Logging": {
     "LogLevel": {
       "Default": "Information",
